--- a/recipes-frontend/src/App.css
+++ b/recipes-frontend/src/App.css
@@ -38,7 +38,19 @@
 }
 
 body {
-  background-image: url("recipes-frontend/public/img/povarenok.jpg");
-  background-repeat: no-repeat;
-  background-size: cover, contain;
+  display: block;
+  width: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    background-image: url("/public/img/povarenok.jpg");
+    background-repeat: no-repeat;
+    background-size:cover; 
+    width: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
 }
