--- a/recipes-frontend/src/components/RecipeDetail.css
+++ b/recipes-frontend/src/components/RecipeDetail.css
@@ -1,5 +1,5 @@
 table {
-  width: 450px;
+  width: auto;
   /* border-top: 7px solid rgb(43, 129, 17); */
   border-collapse: collapse;
   text-align: center;
